// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense total 
    $235.00
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    3
     expense total 
    $235,333.00
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with zero expense 1`] = `
<div>
  <h1>
    Viewing 
    0
     expense total 
    $0.00
  </h1>
</div>
`;
